--- a/style.css
+++ b/style.css
@@ -280,6 +280,7 @@ span {
 @media screen and (min-width: 400px) {
     header {
         background: url(bg-hero-desktop.svg);
+         background-color: hsl(193, 100%, 96%)
     }
 
     .navbar {
